Tue Aug  3 14:55:49 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* tests/testing.c: do not exit on parse if interactive
	* server/gam_poll.c: fix a bug for removed resources
	* libgamin/gam_api.c: try to work around some timeout/connection
	  issues when multiple process try to for a server.

Mon Aug  2 14:11:18 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* gamin.spec.in: spelling fix (thanks fcrozat)
	* libgamin/gam_api.clibgamin/gam_data.c libgamin/gam_data.h:
	  fix a problem of setting/checking that the client did actually
	  authenticate with the server.
	* tests/testing.c: make a better interactive debugging mode
	  using "testgam -" more powerful than pure static file tests.

Fri Jul 30 15:01:17 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* configure.in gamin.spec.in libgamin/Makefile.am: release 0.0.3,
	  with makefile and spec fixups from Frederic Crozat

Thu Jul 29 16:31:20 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* configure.in libgamin/gam_api.c server/gam_channel.c
	  server/gam_channel.h server/gam_connection.c server/gam_server.c
	  server/gam_server.h: reactivated support for OSes without 
	  abstract sockets using a /tmp subdir per user to avoid problems
	* doc/socket.txt: small text describing the socket handling
	* doc/gamin-api.xml: rebuilt

Wed Jul 28 22:29:57 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* configure.in libgamin/gam_api.c server/gam_channel.c: desactivating
	  code if abstract sockets are not found following security problem
	  http://mail.gnome.org/archives/gamin-list/2004-July/msg00017.html

Tue Jul 27 12:23:52 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* configure.in server/Makefile.am server/gam_inotify.c
	  server/gam_inotify.h server/gam_server.c: Applied patches
	  from John McCutchan for inotify the potential dnotify
	  kernel API replacement on Linux.

Tue Jul 27 11:52:58 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* libgamin/fam.h: fix a compilation problem with latest patch.