@@ -1,3 +1,3 @@
-connected
+connected to test
 pending 0
 disconnected
