@@ -1,0 +1,11 @@
+mkdir test1
+connected to test
+mondir test1 0
+1: /u/veillard/gamin/tests/test1 Exists: NULL
+1: /u/veillard/gamin/tests/test1 EndExist: NULL
+mkfile test1/foo
+1: foo Created: NULL
+rmfile test1/foo
+1: foo Deleted: NULL
+disconnected
+rmdir test1
