@@ -1,0 +1,7 @@
+mkdir test1
+connect test
+pending
+mondir test1
+expect 2
+disconnect
+rmdir test1
