@@ -1,0 +1,13 @@
+mkdir test1
+connect test
+mondir test1
+expect 2
+# for some reason if we don't wait here the server does not
+# notify the changes made to test1 when it gets the dnotify event
+wait
+mkfile test1/foo
+expect 1
+rmfile test1/foo
+expect 1
+disconnect
+rmdir test1
